# github-stats-spark

./: .gitignore  ANALYSIS_SUMMARY.txt  CACHE_OPTIMIZATION_SUMMARY.md  CACHE_VERIFICATION_REPORT.md  CHANGELOG.md  CLAUDE.md  DASHBOARD_DATA_MAPPING.json  DASHBOARD_INTEGRATION_ANALYSIS.md  ENHANCEMENT_FUN_STATS.md  FRONTEND_RESEARCH_SUMMARY.md  FRONTEND_STACK_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_ANALYSIS.md  UNIFIED_DATA_README.md  requirements-dev.txt  requirements.txt  run-spark.ps1  setup.py  test-cache-logic.ps1  test-cache-logic.sh  test-cache-skip.py  test-cache-status.ps1  test-cache-status.sh  test-dashboard.ps1  test-dashboard.sh  test-unified-data.ps1  test-unified-data.sh  test_env.py  test_results.txt  verify-setup.py  verify-smart-cache.ps1
.cache/: ai_summary_AsyncDemo_676f5070384e_20251204.json  ai_summary_AsyncDemo_676f5070384e_2025W49.json  ai_summary_Azure.Data.Tables-Extensions_acef3ad28061_20250402.json  ai_summary_Azure.Data.Tables-Extensions_acef3ad28061_20250520.json  ai_summary_Azure.Data.Tables-Extensions_acef3ad28061_2025W14.json  ai_summary_ConcurrentProcessing_d07a3d08752d_20251218.json  ai_summary_ConcurrentProcessing_d07a3d08752d_2025W51.json  ai_summary_DataAnalysisDemo_3b60c099fdb6_20251203.json  ai_summary_DataAnalysisDemo_3b60c099fdb6_2025W49.json  ai_summary_DecisionSpark_af6c86e2453d_20251227.json  ai_summary_DecisionSpark_af6c86e2453d_2025W52.json  ai_summary_FastEndpointApi_ee90f96f0773_20251116.json  (+649 more)
tests/fixtures/sample_dependency_files/: Gemfile  go.mod  package.json  pyproject.toml  requirements.txt
(+1964 files in other folders)
