[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-python-project"
version = "1.2.3"
description = "Sample Python project using pyproject.toml"
requires-python = ">=3.8"

dependencies = [
    "django>=4.2.0",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.270"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
